# ferris-rs

./: .gitignore  COPYING  Cargo.toml  README.md  memory.x
.github/scripts/: ci.bash
.github/workflows/: ci.yml
src/: io_expander.rs  keymap_basic.rs  keymap_borisfaure.rs  keymap_pierrec83.rs  layout.rs  main.rs  right.rs
