[package]
name = "ferris"
version = "0.1.0"
authors = ["Boris Faure <boris@fau.re>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32f072", "stm32-usbd"] }
#stm32f0xx-hal = { path = "../stm32f0xx-hal", features = ["rt", "stm32f072", "stm32-usbd"] }
#stm32f0xx-hal = { git = "https://github.com/borisfaure/stm32f0xx-hal", branch = "master", features = ["rt", "stm32f072", "stm32-usbd"] }
panic-halt = "0.2"
usb-device= "0.2"
cortex-m-rtic = "1.0"
systick-monotonic = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
mcp230xx = { git = "https://github.com/borisfaure/mcp230xx", branch = "master" }
#mcp230xx = { path = "../mcp230xx" }
embedded-hal = "0.2"
nb = "1.0"

[profile.release]
opt-level = 'z'
lto = true
incremental = false
