[package]
name = "ferris"
version = "0.2.0"
authors = ["Boris Faure <boris@fau.re>"]
edition = "2021"

[features]
bling = []
compact = []
mini = []
high = []
keymap_basic = []
keymap_borisfaure = []
keymap_pierrec83 = []
default = ["mini", "keymap_borisfaure"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32f072", "stm32-usbd"] }
panic-halt = "0.2"
usb-device= "0.2"
cortex-m-rtic = "1.0"
systick-monotonic = "1.0"
keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "main" }
#keyberon = { path = "../keyberon" }
embedded-hal = "1.0"
nb = "1.0"

[profile.release]
opt-level = 'z'
lto = true
incremental = false
